--- a/pet-store/styles/newsletter.css
+++ b/pet-store/styles/newsletter.css
@@ -1,4 +1,81 @@
+header {
+	/*background: url('../images/foxy.jpeg') no-repeat center center fixed;
+	background-size: cover;
+	height: 1000px;*/
+	font-family: 'Cardo';
+}
+
+
+
+
+body {
+  min-height: 100%;
+  /*background-color: #ccc;*/
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Open Sans';
+  background-image: url(../images/foxy.jpeg);
+  background-size: cover;
+}
+
+#links {
+	display: flex;
+	flex-direction: flex-start;
+}
+
+#logo {
+	flex: 2;
+}
+
+.logo {
+	font-size: 36px;
+}
+
+.button {
+	display: flex;
+	background-color: #A7A6A6;
+	height: 50px;
+	align-items: center;
+	flex: 1;
+	opacity: 0.7;
+}
+
+/*nav {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	background-color: #A7A6A6;
+	color: white;
+	width: 100%;
+	height: 60px;
+	font-size: 24px;
+}
+*/
+ul {
+	
+	list-style: none;
+}
+
+li {
+	display: inline;
+}
+
+a {
+	color: black;
+	text-decoration: none;
+	margin: 0 20px;
+}
+
 .container {
 	display: flex;
 	justify-content: center;
+	background-color: #A7A6A6;
+	margin-top: 100px;
+	border-radius: 100px;
+	opacity: 0.7;
 }
+
+
+
