--- a/pet-store/styles/style.css
+++ b/pet-store/styles/style.css
@@ -18,19 +18,42 @@ body {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  font-family: 'Open Sans'
+  font-family: 'Open Sans';
 }
 
 nav {
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	flex-direction: flex-start;
 	position: fixed;
-	background-color: black;
-	color: white;
+	background-color: #A7A6A6;
 	width: 100%;
-	height: 60px;
+	/*height: 60px;*/
 	font-size: 24px;
+}
+
+#links {
+	display: flex;
+	flex-direction: flex-start;
+	/*position: fixed;*/
+}
+
+#logo {
+	flex: 2;
+}
+
+.logo {
+	font-size: 36px;
+}
+
+
+.button {
+	display: flex;
+	background-color: #A7A6A6;
+	height: 50px;
+	align-items: center;
+	flex: 1;
+	opacity: 0.7;
+
 }
 
 ul {
@@ -39,13 +62,16 @@ ul {
 }
 
 li {
-	display: inline;
+	display: inline-block;
 }
 
+
+
 a {
-	color: white;
+	color: black;
 	text-decoration: none;
 	margin: 0 20px;
+	size: 36px;
 }
 
 /* ------------ MAIN ------------- */
@@ -59,36 +85,103 @@ a {
 main {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-around;
-	width: 654px;
+	justify-content: center;
+	/*width: 1196px;*/
 }
 
-.section {
+.heading {
+	text-align: left;
+	font-size: 82px;
+	margin: 0px;
+}
+
+.subscribe {
+	width: 233px;
+	margin: 0 auto;
+	margin-top: 288px;
+	margin-left: 130px;
+}
+
+
+.section1 {
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
-	width: 654px;
+	justify-content: space-around;
+	/*width: 654px;*/
+	/*background-color: grey;*/
+}
+
+.icon1 {
+	height: 260px;
+	width: 260px;
+	border-radius: 140px;
+	margin: 50px 0 20px;
+	background-image: url('../images/JonSnow.png');
+	background-position: center;
+	background-size: cover;
+}
+
+.icon2 {
+	height: 260px;
+	width: 260px;
+	border-radius: 140px;
+	margin: 50px 0 20px;
+	background-image: url(../images/Daenerys.jpg);
+	background-position: center;
+	background-size: cover;
+}
+
+.name {
+	height: 44px;
+	width: 100%;
+	/*background-color: black;*/
+}
+
+.description {
+	height: 140px;
+	/*background-color: yellow;*/
+	margin: 20px 0 50px;
 }
 
 h2 {
 	text-align: center;
 }
+h3 {
+	text-align: center;
 
+}
 
+#gallery {
+	display: flex;
+	flex-direction: row;
+	/*background-color: blue;*/
+	width: 1196px;
+	margin-bottom: 50px;
+}
 
+.column1 {
+	width: 588px;
+	margin: 0 10px;
+}
 
+.column2 {
+	width: 588px;
+	margin: 0 10px;
+}
 
+img {
+  max-width: 100%;
+  max-height: 100%;
+  margin: 10px 0;
+}
 
+.row-1 {
+	width: 260px;
+}
 
-
-
-
-
-
-
-
-
-
+.row-2 {
+	width: 260px;
+}
 
 
 /* -------- FOOTER --------- */
@@ -99,6 +192,49 @@ footer {
 	width: 100%;
 	height: 70px;
 	color: white;
-	background-color: red;
+	background-color: #A7A6A6;
 	bottom: 0px;
+	opacity: 0.7;
 }
+
+
+/* ---------- MEDIA QUESRIES ------------- */
+
+@media only screen and (max-width: 1215px) {
+	header {
+		height: 700px;
+		width: 100%;
+		background-size: 1240px auto;
+		
+	}
+
+	.subscribe {
+		width: 150px;
+	}
+
+	#gallery {
+		width: 900px;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
