--- a/pet-store/views/index.html
+++ b/pet-store/views/index.html
@@ -4,58 +4,69 @@
 	<meta charset="UTF-8">
 	<title>Pet Store</title>
 	<link href="https://fonts.googleapis.com/css?family=Cardo|Open+Sans" rel="stylesheet">
+
 	<link rel="stylesheet" type="text/css" href="../styles/style.css">
 </head>
 <body>
 	<!-- <div class='container'> -->
-		<header>
-			<nav>
-				<div id="links">
-				<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#about">About</a></li>
-				<li><a href="newsletter.html">News Letter</a></li>
-				</ul>
-				</div>
-			</nav>
-		</header>
-
-		<div class='container'>
-		<main>
-			<div class='section'>
-				<div class='row-1'>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis veniam dolorum, eos accusantium ad nulla iure eveniet esse hic. Architecto commodi, beatae, culpa maiores aliquam cumque corrupti itaque impedit neque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis veniam dolorum, eos accusantium ad nulla iure eveniet esse hic. Architecto commodi, beatae, culpa maiores aliquam cumque corrupti itaque impedit neque.
-
-				  ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis veniam dolorum, eos accusantium ad nulla iure eveniet esse hic. Architecto commodi, beatae, culpa maiores aliquam cumque corrupti itaque impedit neque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis veniam dolorum, eos accusantium ad nulla iure eveniet esse hic. Architecto commodi, beatae, culpa maiores aliquam cumque corrupti itaque impedit neque.</p>
-
-
-				</div>
-				<div class='row-2'>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, expedita praesentium amet nihil, cum a sapiente error ad est, nesciunt ex eos aliquam consectetur assumenda, nobis animi magnam dolorem atque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, expedita praesentium amet nihil, cum a sapiente error ad est, nesciunt ex eos aliquam consectetur assumenda, nobis animi magnam dolorem atque.
-
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, expedita praesentium amet nihil, cum a sapiente error ad est, nesciunt ex eos aliquam consectetur assumenda, nobis animi magnam dolorem atque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, expedita praesentium amet nihil, cum a sapiente error ad est, nesciunt ex eos aliquam consectetur assumenda, nobis animi magnam dolorem atque.</p>
-
-				</div>
+	<header>
+		<!-- <nav> -->
+			<div id="links">
+				<div id='logo' class='button'><a href="index.html" class='logo'>Panthera</a></div>
+				<div class='button'><a href="#biography">Biography</a></div>
+				<div class='button'><a href="#gallery">Gallery</a></div>
+				<div class='button'><a href="newsletter.html">News Letter</a></div>
 			</div>
-		<div id='about'>
-			<h2>About</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi asperiores doloribus cupiditate recusandae, tempora alias optio, obcaecati ratione magni totam nemo fugit labore provident quos! Iste consectetur ipsam tempora dignissimos vel voluptate, nulla delectus facilis, quis minus error repellat, vero esse atque, ducimus voluptatum autem natus aspernatur quam. Officiis atque, quos. Tenetur voluptate blanditiis commodi reiciendis eveniet ut veniam eos corporis, voluptatum laboriosam accusantium impedit id perferendis et, nam a culpa, fugit optio animi nihil eum tempore adipisci. Quos voluptatum quasi optio nobis vitae tenetur unde corporis culpa, voluptatibus cumque, explicabo et nam quia atque architecto omnis accusantium autem reprehenderit.</p>
-		</div>
+		<!-- </nav> -->
 
-
-		</main>
+		<div class='subscribe'>
+			<h2 class='heading'>Newsletter</h2>
+			<p> Sign up to recieve our highly curated newsletter. Each newsletter is hand-crafted with the finest animal facts for you and your loved ones to learn and cherish. Included in the newsletter are photos of our newest addisions.</p>
+			<div class='button'><a href="newsletter.html">Subscribe</a></div>
 		</div>
-		
-		<footer>
-			<div id="footer-container">
-				<div class="social-links">
-					<a href="https://www.facebook.com/mind1990"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
-					<a href="https://twitter.com/?lang=en"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
-					<a href="https://www.instagram.com/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-				</div>
+		<
+	</header>
+
+	<div class='container'>
+	<main>
+		<h2 id='biography'>Biographies</h2>
+		<div class='section1'>
+			<div class='row-1'>
+				<div class='icon1'></div>
+					<div class='name'><h3>Aurum Snow</h3></div>
+						<div class='description'><p>As a gift from his father, Aurum received a beautiful albino direwolf pup he would name "Ghost". Through the relationship he has created with his direwolf, he has learned how loyal and influential such animals could be.</p></div>
 			</div>
-				<p class="copyright">©TAMS</p>
-		</footer>
+			<div class='row-2'>
+				<div class='icon2'></div>
+					<div class='name'><h3>Silva Khaleesi</h3></div>
+						<div class='description'><p>Hailing from the Arendales, Siva's family is known for their commanding knowledge and expertiece on the world's dragons. A genius in her craft, she is reknown by her title as the, "Mother of Dragon."</p></div>
+			</div>
+		</div>
+		<h2>Gallery</h2>
+		<div id='gallery'>
+			<div class='column1'>
+				<img src='../images/wolf.jpg'>
+				<img src='../images/snake.jpg'>
+				<img src='../images/panda.jpg'>
+			</div>
+			<div class='column2'>
+				<img src='../images/tigerface.jpg'>
+				<img src='../images/owl.jpg'>
+			</div>
+		</div>
+	</main>
+	</div>
+	
+	<footer>
+		<div id="footer-container">
+			<div class="social-links">
+				<a href="https://www.facebook.com/mind1990"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+				<a href="https://twitter.com/?lang=en"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+				<a href="https://www.instagram.com/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+			</div>
+		</div>
+			<p class="copyright">©TAMS</p>
+	</footer>
 	<!-- </div> -->
 </body>
 </html>
