--- a/pet-store/views/newsletter.html
+++ b/pet-store/views/newsletter.html
@@ -1,61 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>News Letter</title>
 	<link href="https://fonts.googleapis.com/css?family=Cardo|Open+Sans" rel="stylesheet">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	 crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="../styles/newsletter.css">
 </head>
+
 <body>
-<header>
-	<div id="links">
-		<div id='logo' class='button'><a href="index.html" class="logo">Panthera</a></div>
-		<!-- <div class='button'><a href="index.html/#biography">Biography</a></div> -->
-		<div class='button'><a href="index.html">Home</a></div>
-		<!-- <div class='button'><a href="newsletter.html">News Letter</a></div> -->
-	</div>
-</header>
+	<header>
+		<div id="links">
+			<div id='logo' class='button'><a href="index.html" class="logo">Panthera</a></div>
+			<!-- <div class='button'><a href="index.html/#biography">Biography</a></div> -->
+			<div class='button'><a href="index.html">Home</a></div>
+			<!-- <div class='button'><a href="newsletter.html">News Letter</a></div> -->
+		</div>
+	</header>
 
 
-<div class='container'>
-	<!-- Begin Mailchimp Signup Form -->
-	<div id="mc_embed_signup">
-	<form action="https://facebook.us19.list-manage.com/subscribe/post?u=1200698e1dae50c44d0c09a67&amp;id=9851207bdb" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-	    <div id="mc_embed_signup_scroll">
-		<h2>Become a Panthera</h2>
-	<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-	<div class="mc-field-group">
-		<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-	</label>
-		<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-	</div>
-	<div class="mc-field-group">
-		<label for="mce-FNAME">First Name </label>
-		<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-	</div>
-	<div class="mc-field-group">
-		<label for="mce-LNAME">Last Name </label>
-		<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
-	</div>
-	<div class="mc-field-group size1of2">
-		<!-- <label for="mce-BIRTHDAY-month">Birthday </label> -->
-		<!-- <div class="datefield">
+	<div class='container'>
+		<!-- Begin Mailchimp Signup Form -->
+		<div id="mc_embed_signup">
+			<form action="https://facebook.us19.list-manage.com/subscribe/post?u=1200698e1dae50c44d0c09a67&amp;id=9851207bdb" method="post"
+			 id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+				<div id="mc_embed_signup_scroll">
+					<h2>Become a Panthera</h2>
+					<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+					<div class="mc-field-group">
+						<label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
+						</label>
+						<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+					</div>
+					<div class="mc-field-group">
+						<label for="mce-FNAME">First Name </label>
+						<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+					</div>
+					<div class="mc-field-group">
+						<label for="mce-LNAME">Last Name </label>
+						<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+					</div>
+					<div class="mc-field-group size1of2">
+						<!-- <label for="mce-BIRTHDAY-month">Birthday </label> -->
+						<!-- <div class="datefield">
 			<span class="subfield monthfield"><input class="birthday " type="text" pattern="[0-9]*" value="" placeholder="MM" size="2" maxlength="2" name="BIRTHDAY[month]" id="mce-BIRTHDAY-month"></span> / 
 			<span class="subfield dayfield"><input class="birthday " type="text" pattern="[0-9]*" value="" placeholder="DD" size="2" maxlength="2" name="BIRTHDAY[day]" id="mce-BIRTHDAY-day"></span> 
-			<span class="small-meta nowrap">( mm / dd  --><!-- )</span> -->
+			<span class="small-meta nowrap">( mm / dd  -->
+						<!-- )</span> -->
+					</div>
+				</div>
+				<div id="mce-responses" class="clear">
+					<div class="response" id="mce-error-response" style="display:none"></div>
+					<div class="response" id="mce-success-response" style="display:none"></div>
+				</div> <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+				<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1200698e1dae50c44d0c09a67_9851207bdb"
+					 tabindex="-1" value=""></div>
+				<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 		</div>
-	</div>	<div id="mce-responses" class="clear">
-			<div class="response" id="mce-error-response" style="display:none"></div>
-			<div class="response" id="mce-success-response" style="display:none"></div>
-		</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-	    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1200698e1dae50c44d0c09a67_9851207bdb" tabindex="-1" value=""></div>
-	    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-	    </div>
-	</form>
+		</form>
 	</div>
-</div>
-<!--End mc_embed_signup-->
+	</div>
+	<!--End mc_embed_signup-->
 
 </body>
+
 </html>
